--- a/javanim2/src/application/GameGUI.fxml
+++ b/javanim2/src/application/GameGUI.fxml
@@ -13,11 +13,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ctrl.GameController">
    <children>
-      <VBox layoutX="1.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="-5.0" prefHeight="400.0" prefWidth="606.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-5.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
          <children>
             <BorderPane prefHeight="200.0" prefWidth="535.0">
                <top>
@@ -71,48 +70,19 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                     <children>
-                        <TextFlow prefHeight="200.0" prefWidth="200.0" textAlignment="CENTER">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                           </children>
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </TextFlow>
-                     </children>
                   </GridPane>
                </center>
             </BorderPane>
-            <GridPane prefHeight="128.0" prefWidth="400.0">
-              <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <VBox.margin>
-                  <Insets left="100.0" right="100.0" top="10.0" />
-               </VBox.margin>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0" style="-fx-background-color: gray;">
                <children>
-                  <Button mnemonicParsing="false" onAction="#onClick7" prefHeight="31.0" prefWidth="139.0" text="7" />
-                  <Button mnemonicParsing="false" onAction="#onClick8" prefHeight="38.0" prefWidth="133.0" text="8" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#onClick9" prefHeight="38.0" prefWidth="133.0" text="9" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#onClick4" prefHeight="43.0" prefWidth="134.0" text="4" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#onClick5" prefHeight="38.0" prefWidth="133.0" text="5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#onClick3" prefHeight="38.0" prefWidth="133.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#onClick6" prefHeight="38.0" prefWidth="133.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#onClick1" prefHeight="45.0" prefWidth="134.0" text="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#onClick2" prefHeight="38.0" prefWidth="133.0" text="2" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#onClick0" prefHeight="38.0" prefWidth="133.0" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Button mnemonicParsing="false" onAction="#onClickClear" prefHeight="38.0" prefWidth="133.0" text="C" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <Button fx:id="num1" onAction="#select1" mnemonicParsing="false" prefWidth="60.0" text="1" />
+                  <Button fx:id="num2" onAction="#select2" mnemonicParsing="false" prefWidth="60.0" text="2" />
+                  <Button fx:id="num3" onAction="#select3" mnemonicParsing="false" prefWidth="60.0" text="3" />
                </children>
-            </GridPane>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </HBox>
             <Button mnemonicParsing="false" onAction="#onClickForDecide" prefHeight="25.0" prefWidth="100.0" text="!!!!決定">
                <opaqueInsets>
                   <Insets />
