--- a/javanim2/src/application/GameGUI.fxml
+++ b/javanim2/src/application/GameGUI.fxml
@@ -6,55 +6,47 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ctrl.GameController">
    <children>
       <VBox layoutX="-5.0" prefHeight="400.0" prefWidth="606.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-5.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
          <children>
-            <BorderPane prefHeight="200.0" prefWidth="535.0">
+            <BorderPane fx:id="BP" prefHeight="218.0" prefWidth="606.0">
                <top>
-                  <HBox alignment="CENTER" prefHeight="29.0" prefWidth="605.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
+                  <HBox alignment="CENTER" spacing="160.0" style="-fx-background-color: gray;" BorderPane.alignment="CENTER">
                      <children>
                         <Button mnemonicParsing="false" onAction="#toStartGUI" style="-fx-background-color: gray; -fx-border-color: black;" text="スタート画面に行く">
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
                            <HBox.margin>
-                              <Insets right="10.0" />
+                              <Insets />
                            </HBox.margin>
                         </Button>
                         <Label fx:id="turn_label" alignment="CENTER" contentDisplay="CENTER" style="-fx-background-color: white;" text="which turn??" textAlignment="CENTER">
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
-                           <padding>
-                              <Insets left="75.0" right="75.0" />
-                           </padding>
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                         <Button mnemonicParsing="false" onAction="#exitGame" style="-fx-background-color: gray; -fx-border-color: black;" text="ゲームを終了">
                            <HBox.margin>
-                              <Insets left="10.0" />
+                              <Insets />
                            </HBox.margin>
                         </Button>
                      </children>
                   </HBox>
                </top>
-               <left>
-                  <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-               </left>
-               <right>
-                  <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-               </right>
                <bottom>
                   <Text fx:id="displaying_number" strokeType="OUTSIDE" strokeWidth="0.0" text="0" BorderPane.alignment="CENTER" />
                </bottom>
@@ -72,12 +64,20 @@
                     </rowConstraints>
                   </GridPane>
                </center>
+               <left>
+                  <FlowPane fx:id="flows" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+               </left>
             </BorderPane>
+            <TextFlow prefHeight="19.0" prefWidth="606.0" textAlignment="CENTER">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="error文章" textAlignment="CENTER" />
+               </children>
+            </TextFlow>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0" style="-fx-background-color: gray;">
                <children>
-                  <Button fx:id="num1" onAction="#select1" mnemonicParsing="false" prefWidth="60.0" text="1" />
-                  <Button fx:id="num2" onAction="#select2" mnemonicParsing="false" prefWidth="60.0" text="2" />
-                  <Button fx:id="num3" onAction="#select3" mnemonicParsing="false" prefWidth="60.0" text="3" />
+                  <Button fx:id="num1" mnemonicParsing="false" onAction="#select1" prefWidth="60.0" text="1" />
+                  <Button fx:id="num2" mnemonicParsing="false" onAction="#select2" prefWidth="60.0" text="2" />
+                  <Button fx:id="num3" mnemonicParsing="false" onAction="#select3" prefWidth="60.0" text="3" />
                </children>
                <opaqueInsets>
                   <Insets />
